# hdl_obfuscator

./: .gitignore  LICENSE  Makefile  README.md  build.xml  obfuscator.spec  pom.xml  pyproject.toml  requirements.txt  setup.py
archive/stash/: HDLObf.java  NameChange.java
archive/stash/grammar/: SystemVerilogLexer.g
archive/stash/src/main/resources/: SystemVerilogNoSkipTokenTypes.txt
demangler/: Makefile  demangler.spec
demangler/src/: Demangler.py
grammar/: SipcNcNocMacroLexer.g4  SystemVerilogMacroLexer.g4
src/: HashFunctions.py  ModuleWalker.py  Obfuscator.py  ObfuscatorException.py  SystemVerilogObfuscator.py  obfuscator.py
src/grammar/: SystemVerilogLexer.g
src/hdl_obfuscator/: __init__.py
src/hdl_obfuscator/demangler/: Demangler.py  FileDemangler.py
src/hdl_obfuscator/mangler/: FileListVisitor.py  HashFunctions.py  ModuleWalker.py  Obfuscator.py  ObfuscatorException.py  SystemVerilogObfuscator.py  config.py
src/hdl_obfuscator/mangler/systemverilog/: SipcNcNocMacroLexer.interp  SipcNcNocMacroLexer.py  SipcNcNocMacroLexer.tokens  SystemVerilogLexer.py  SystemVerilogMacroLexer.interp  SystemVerilogMacroLexer.py  SystemVerilogMacroLexer.tokens  SystemVerilogParser.py  SystemVerilogParserListener.py  SystemVerilogPreParser.py  SystemVerilogPreParserListener.py
src/main/java/com/signature/hdlobf/: HDLObf.java  NameChange.java  Obfuscator.java  SystemVerilogObfuscatorv4.java  VhdlObfuscatorv4.java
stash/: Obfuscate.java
test/nc_sv_test/: nc_test.csh  nc_test_result_1.v
test/obf_sv_test/: obf_test.bat  obf_test.csh
(+10 files in other folders)
